--- a/src/components/Marketing.astro
+++ b/src/components/Marketing.astro
@@ -13,7 +13,7 @@ import Link from "./Link.astro";
       href="#צור-קשר"
       type="btn"
       btnStyle="btn-secondary"
-      classes=""
+      classes="hover:btn-inverted"
     />
   </div>
 </section>
