--- a/src/components/SectionWhyUs.astro
+++ b/src/components/SectionWhyUs.astro
@@ -8,7 +8,7 @@ const textData = [
   },
   {
     q: "למה אנחנו?",
-    a: "כי אנו מאמינים שלניסיון אין מחיר ולמקצוענות אין תחליף. הלקוחות שלנו נהנים משני העולמות – לצוות שלנו ניסיון מצטבר של מעל 30 שנה, וידע אקדמי ומקצועי עשיר בעולמות משאבי האנוש, ניסיון וידע שעומדים לרשותכם ומחויבים להצלחה שלכם, אנו מתחייבים לשירות מקצועי ואדיב ולמענה מהיר ומדויק לצרכי משאבי האנוש שלכם."
+    a: "כי לניסיון אין מחיר ולמקצוענות אין תחליף. הלקוחות שלנו נהנים משני העולמות – לצוות שלנו ניסיון מצטבר של מעל 30 שנה, וידע אקדמי ומקצועי עשיר בעולמות משאבי האנוש - ניסיון וידע שעומדים לרשותכם ומחויבים להצלחה שלכם."
   }
 ];
 ---
