fix h1 line height

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import Link from "./Link.astro";
   <div
     class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-fluid-xl md:bg-fixed"
   >
-    <h1 class="text-fluid-5 font-semibold leading-none md:mt-28">
+    <h1 class="text-fluid-5 font-semibold md:mt-28">
       ניהול אנשים <span class="whitespace-nowrap">מכוון מטרה</span>
     </h1>
     <div class="flex flex-col gap-5 text-fluid-2">
