change text in hero and why-us sections

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,11 +15,14 @@ import Link from "./Link.astro";
     </h1>
     <div class="flex flex-col gap-5 text-fluid-2">
       <h2>
-        פתרונות מקצועיים במיקור חוץ לניהול משאבי אנוש <span
-          class="whitespace-nowrap">לעסקים בינוניים וקטנים</span
+        ניהול המשאב האנושי באמצעות מיקור חוץ מקצועי <span
+          class="whitespace-nowrap">חוסך זמן, כסף ודאגות</span
         >
       </h2>
-      <h2>ייעוץ וליווי ארגוני</h2>
+      <h2>
+        אנו מספקים טווח רחב של פתרונות בתחום, בהם ניהול כולל של המשאב האנושי
+        בארגון, ליווי מנהלים, וייעוץ ארגוני
+      </h2>
     </div>
 
     <div class="flex flex-wrap justify-center gap-8">
