fix text behind the logo issue in hero section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,24 +8,24 @@ import Link from "./Link.astro";
 >
   <!-- Hero wrapper -->
   <div
-    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-fluid-xl md:bg-fixed"
+    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-7 sm:gap-fluid-xl md:bg-fixed"
   >
     <h1 class="text-fluid-5 font-semibold md:mt-28">
       ניהול אנשים <span class="whitespace-nowrap">מכוון מטרה</span>
     </h1>
     <div class="flex flex-col gap-5 text-fluid-2">
       <h2>
-        ניהול המשאב האנושי באמצעות מיקור חוץ מקצועי <span
-          class="whitespace-nowrap">חוסך זמן, כסף ודאגות</span
+        ניהול המשאב האנושי באמצעות מיקור חוץ <span class="whitespace-nowrap"
+          >חוסך זמן, כסף ודאגות</span
         >
       </h2>
-      <h2>
-        אנו מספקים טווח רחב של פתרונות בתחום, בהם ניהול כולל של המשאב האנושי
-        בארגון, ליווי מנהלים, וייעוץ ארגוני
+      <h2 class="text-base sm:text-fluid-2">
+        אנו מספקים פתרונות ניהול כולל של המשאב האנושי, ליווי מנהלים וייעוץ
+        ארגוני
       </h2>
     </div>
 
-    <div class="flex flex-wrap justify-center gap-8">
+    <div class="mt-12 flex flex-wrap justify-center gap-2 sm:gap-8">
       <Link
         text="לייעוץ חינם"
         href="tel:04-6442777"
