emphasize some text in hero section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,9 +19,9 @@ import Link from "./Link.astro";
           >חוסך זמן, כסף ודאגות</span
         >
       </h2>
-      <h2 class="text-base sm:text-fluid-2">
-        אנו מספקים פתרונות ניהול כולל של המשאב האנושי, ליווי מנהלים וייעוץ
-        ארגוני
+      <h2 class="text-base sm:text-fluid-2 sm:leading-normal">
+        אנו מספקים פתרונות ניהול כולל של המשאב האנושי,
+        <strong class="whitespace-nowrap"> ליווי מנהלים וייעוץ ארגוני</strong>
       </h2>
     </div>
 
