change footer to hebrew, home anchor to home, navigation links inside ul for accessibility

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,9 @@
----
-// images imports
-import logo from "../assets/logo.png";
----
-
 <footer class="bg-bg-green p-4">
   <div class="flex justify-center items-end gap-5">
     <small>
-      Copyright &copy; <span id="copyright"></span> | All rights reserved
+      &copy; כל הזכויות שמורות <span id="copyright"></span> | מקוד - ניהול אנשים
+      מכוון מטרה
     </small>
-    <img src={logo.src} alt="logomark" width="50" />
   </div>
 </footer>
 
