--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,6 +4,7 @@ import Link from "./Link.astro";
 ---
 
 <section
+  id="בית"
   class="min-h-screen text-white bg-[url('../assets/hero-bg-blur.jpg')] bg-cover bg-center"
 >
   <!-- Hero wrapper -->
