--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import SectionContact from "../components/SectionContact.astro";
 ---
 
 <MainLayout
-  title="מקוד | ניהול אנשים מכוון מטרה"
+  title="מקוד - ניהול אנשים מכוון מטרה"
   description="טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ"
 >
   <Hero />
