accessibility - add aria labels to contact buttons in mobile devices

--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -42,6 +42,7 @@ import Link from "./Link.astro";
 
       <!-- mobile -->
       <Link
+        aria-label="שיחה לטלפון הנייד"
         href="tel:054-2240063"
         type="btn"
         btnStyle="btn-icon"
@@ -49,6 +50,7 @@ import Link from "./Link.astro";
         classes="hover:btn-primary"
       />
       <Link
+        aria-label="הודעת וואטסאפ"
         href="https://wa.me/972542240063"
         type="btn"
         btnStyle="btn-icon"
@@ -56,6 +58,7 @@ import Link from "./Link.astro";
         classes="hover:btn-primary"
       />
       <Link
+        aria-label="שיחה לטלפון הקווי"
         href="tel:04-6442777"
         type="btn"
         btnStyle="btn-icon"
@@ -63,6 +66,7 @@ import Link from "./Link.astro";
         classes="hover:btn-primary"
       />
       <Link
+        aria-label="שליחת אימייל"
         href="mailto:mikud-na@mikud.net"
         type="btn"
         btnStyle="btn-icon"
