fix color contrast for accessibility

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -12,7 +12,7 @@ import { Icon } from "astro-icon";
     <input type="hidden" name="_subject" value="הודעה חדשה מאתר מקוד" />
 
     <div>
-      <label for="name">שם</label>
+      <label for="name" class="text-accent">שם</label>
       <input
         id="name"
         type="text"
@@ -23,7 +23,7 @@ import { Icon } from "astro-icon";
     </div>
 
     <div>
-      <label for="email">דוא״ל</label>
+      <label for="email" class="text-accent">דוא״ל</label>
       <input
         id="email"
         type="email"
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon";
     </div>
 
     <div class="col-span-full row-span-2">
-      <label for="message">הודעה</label>
+      <label for="message" class="text-accent">הודעה</label>
       <textarea
         id="message"
         wrap="soft"
