--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ import Link from "./Link.astro";
 >
   <!-- Hero wrapper -->
   <div
-    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-7 sm:gap-fluid-xl md:bg-fixed"
+    class="min-h-screen bg-[#331C14] bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-7 sm:gap-fluid-xl md:bg-fixed"
   >
     <h1 class="text-fluid-5 font-semibold md:mt-28">
       ניהול אנשים <span class="whitespace-nowrap">מכוון מטרה</span>
