--- a/src/components/Marketing.astro
+++ b/src/components/Marketing.astro
@@ -3,7 +3,7 @@ import Link from "./Link.astro";
 ---
 
 <section
-  class="p-fluid-xl text-white bg-[url('../assets/marketing-bg.jpg')] bg-cover bg-center"
+  class="p-fluid-xl text-white bg-[#554E52] bg-[url('../assets/marketing-bg.jpg')] bg-cover bg-center"
 >
   <div class="flex flex-col items-center gap-7 text-center">
     <h2 class="text-fluid-3">מוכנים לקחת את העסק שלכם לשלב הבא?</h2>
