fix accessibility widget path

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -25,6 +25,6 @@ const { title, description } = Astro.props;
       <slot />
     </main>
     <Footer />
-    <script src="/public/nagishli_beta.js" is:inline></script>
+    <script src="/dist/nagishli_beta.js" is:inline></script>
   </body>
 </html>
