fix accessibility widget path 2

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,4 +21,5 @@ import SectionContact from "../components/SectionContact.astro";
   <Marketing />
   <SectionTeam />
   <SectionContact />
+  <script src="/nagishli_beta.js" is:inline></script>
 </MainLayout>
